Running into issues accessing elements under others and overflow

--- a/client/src/components/Entries.css
+++ b/client/src/components/Entries.css
@@ -77,3 +77,37 @@
 .close:after {
   transform: rotate(-45deg);
 }
+
+.split {
+  display: flex;
+}
+.no-dreams {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: Inter;
+  font-weight: 500;
+  font-size: 200%;
+}
+button {
+  font-size: 100%;
+  background: #d5d0ff;
+  box-shadow: 0 5px 0px #948fc5;
+  color: gray;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+button:active {
+  box-shadow: none;
+  transform: translateY(5px);
+}
+.dreams {
+  display: block;
+  border: 2px solid red;
+  width: 100%;
+  height: 50px;
+  pointer-events: none;
+}
